Added feature: several clips url import at once. Removed info top left tooltip in PM player.

--- a/public/src/default-config.json
+++ b/public/src/default-config.json
@@ -71,7 +71,7 @@
       },
       {
         "type": "toc",
-        "hidden": true,
+        "hidden": false,
         "icon": "{{baseDir}}templates/assets/plugins/toc/toc-icon.png"
       },
       {
